inter/Tests/Valid/predec.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_number int32
	constant (K_number) Peach = Banana
	constant (K_number) Banana = 2
